# mqcPack

./: .gitignore  .travis.yml  CheckInput.F03  Create_Make_Conf  Makefile.am  Makefile.in  README  README.md  buildit  configure  configure.ac  configure.ac_FormCHK  configure.ac_MatrixFile  h.F03  h2.F03  makefile  mqc_install  mqc_script  releaseNotes.txt  testit_runGau.sh
.github/workflows/: ci.yml  linux.yml  macos.yml
.other_libs/BLAS/: README  test_blas_lib.f03
.other_libs/LAPACK/: test_lapack_lib.f03
.other_libs/build_fcns/: Makefile.am_FormCHK  Makefile.am_MatrixFile  Makefile.am_example_FormCHK  Makefile.am_example_MatrixFile  Makefile.in_FormCHK  Makefile.in_MatrixFile  Makefile.in_example_FormCHK  Makefile.in_example_MatrixFile  README  chmod_all  configure.ac_FormCHK  configure.ac_MatrixFile  configure_FormCHK  configure_MatrixFile  cp_all  remove_Gau_pid  remove_SCRDIR  rm_all
.other_libs/gauopen/: Int_specific  README  To_lower  qcmatrix_4.F  qcmatrix_8.F  qcmatrixio_4.F  qcmatrixio_8.F
.other_libs/gaussian/: README
doc/: ABOUT_Algebra2.md  Doxyfile
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_g.html  functions_func_i.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  (+247 more)
doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  interfacemqc__algebra_1_1abs.tex  interfacemqc__algebra_1_1acos.tex  interfacemqc__algebra_1_1aimag.tex  interfacemqc__algebra_1_1asin.tex  interfacemqc__algebra_1_1assignment_07_0A_08.tex  interfacemqc__algebra_1_1assignment_07_0a_08.tex  interfacemqc__algebra_1_1atan.tex  interfacemqc__algebra_1_1atan2.tex  interfacemqc__algebra_1_1cmplx.tex  interfacemqc__algebra_1_1conjg.tex  interfacemqc__algebra_1_1contraction.tex  interfacemqc__algebra_1_1cos.tex  interfacemqc__algebra_1_1dagger.tex  interfacemqc__algebra_1_1dot__product.tex  interfacemqc__algebra_1_1matmul.tex  interfacemqc__algebra_1_1matrix__symm2sq.tex  interfacemqc__algebra_1_1mqc__cast__complex.tex  (+66 more)
examples/: Makefile.am  Makefile.in
examples/Build_Tests/: Makefile.am  Makefile.am_example_FormCHK  Makefile.am_example_MatrixFile  Makefile.in  README
examples/CreateDataList/: testit_no_runGau.sh  testit_runGau.sh
examples/CreateDataList/OUTPUT/: README  out_no_runGau  out_runGau
examples/CreateDataList/test1071/: README
examples/CreateDataList/test1130/: README
examples/CreateDataList/test2/: README
examples/DataSummary/: DataSummary.F03  testit_no_runGau.sh  testit_runGau.sh
examples/DataSummary/OUTPUT/: README  out_no_runGau  out_runGau  out_runGau_v1  out_runGau_v2
examples/FCHK_Tests/: Makefile.am  Makefile.in  README
examples/MatFile_Test/: Makefile.am  README  configure.ac
examples/MatFile_Tests/: Makefile.am  Makefile.in  configure
examples/PrintAllData/: DataPrint.F03  testit_no_runGau.sh  testit_runGau.sh
examples/PrintAllData/OUTPUT/: out_no_runGau  out_runGau_v1  out_runGau_v2
examples/RWF_Tests/: Makefile.am
examples/SCFenergy/: SCFenergy.F03  testit_no_runGau.sh  testit_runGau.sh
examples/SCFenergy/OUTPUT/: out_no_runGau  out_no_runGau.SAVE  out_runGau
examples/WriteTest/: ReadWrite.F03  testit_no_runGau.sh  testit_runGau  testit_runGau.sh
examples/algebra2/: Makefile.am  Makefile.in  algebra_fun.F03  algebra_fun.f03  makefile  out  testit.sh
examples/algebra2/OUTPUT/: out
examples/biorthog/: biorthog.f03  makefile
examples/biorthog/Tests-Biorthog/: sxh.com  test.com  test2.com  test2.fchk  test3.com  x.com  y.com  z.com
examples/data/FormChk/: README  ch4_rhf.fchk
examples/data/Gaussian_input/: README  ch4_rhf.com  test.com
examples/data/MatrixFile/: README  ch4_rhf.mat  rhf_h2-sto3g.mat
examples/diishf/: diishf  diishf.F03  testit.sh
examples/diishf/OUTPUT/: out
examples/extendedap/: extendedap.f03  makefile  subroutines.f03
examples/fullci/: fullci.F03  fullci.f03  makefile  mqc_pscf.f03  rhf-h2.com  rohf-hf.com  testit.sh  uhf-h2.com
examples/fullci-new/: fullci-new.f03  makefile
examples/fullci/OUTPUT/: out
examples/hartreefock/: hartreefock.F03  hartreefock.f03  makefile  test.com  testit.sh
examples/hartreefock/OUTPUT/: out
examples/readTest/: algebra_fun1.f03  testit.sh
examples/readTest/OUTPUT/: out
examples/readWriteInfo/: readWriteInfo.f03
examples/setup/: set_permissions.c
examples/tools/: C_To_F_interface.f03  Check.c  CheckGauInput.c  FullWavefunctionRW.F03  Makefile.am  main_CheckGauInput.f03  main_Wavefunction.f03  mqc_Read_Wavefunction.f03  testit.sh  testit_no_runGau.sh  testit_runGau.sh
examples/tools/OUTPUT/: out  out_no_runGau  out_runGau
examples/tools/test/: ignore
examples/tools/test1071/: ingnore  test1071.com
examples/tools/test1129/: ignore  test1129.com
examples/tools/test1130/: test1130.com
examples/tools/test1132/: ignore  test1132.com
examples/tools/test2/: README
examples/truncatedap/: makefile  subroutines.f03  truncatedap.f03
src/: Makefile.am  Makefile.in  mqc_FullWavefunction.F03  mqc_algebra.F03  mqc_algebra.f03  mqc_algebra2.F03  mqc_algebra2.f03  mqc_binary.F03  mqc_datastructures.F03  mqc_datastructures.f03  mqc_est.F03  mqc_est.f03  mqc_files.F03  mqc_files.f03  mqc_gaussian.F03  mqc_gaussian.f03  mqc_general.F03  mqc_general.f03  mqc_general_lapack.F03  mqc_integrals.F03  mqc_interface.F03  mqc_matwrapper.F03  mqc_molecule.F03  mqc_molecule.f03  mqc_util.c
unitTests/src/: makefile  (+1 more)
(+60 files in other folders)
