AM_FCFLAGS = $(MQC_SPECIFIC_FCFLAGS)
lib_LIBRARIES = libmqc.a
libmqc_a_SOURCES = mqc_general.f03 mqc_algebra2.f03 mqc_algebra.f03 mqc_datastructures.f03 mqc_files.f03  mqc_molecule.f03 mqc_est.f03 mqc_gaussian.f03 mqc_util.c
build: mqc_general.(OBJEXT) mqc_algebra2.(OBJEXT) mqc_algebra.(OBJEXT) mqc_datastructures.(OBJEXT) mqc_files.(OBJEXT)  mqc_molecule.(OBJEXT) mqc_est.(OBJEXT) mqc_gaussian.(OBJEXT) mqc_util.(OBJEXT)

